// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Group form component should render the adding form 1`] = `
<Loading
  className="export-spinner"
  small={true}
  withOverlay={false}
/>
`;

exports[`Button Group form component should render the adding form for generic object button groups 1`] = `
<Loading
  className="export-spinner"
  small={true}
  withOverlay={false}
/>
`;

exports[`Button Group form component should render the editing form 1`] = `
<Provider
  store={
    Object {
      "asyncReducers": Object {
        "FormButtons": [Function],
        "miqCustomTabReducer": [Function],
        "notificationReducer": [Function],
      },
      "dispatch": [Function],
      "getState": [Function],
      "injectReducers": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <GroupForm
    appliesToClass=""
    availableFields={Array []}
    fields={Array []}
    isGenericObject={false}
    recId={42}
    url=""
  >
    <Loading
      className="export-spinner"
      small={true}
      withOverlay={false}
    >
      <div
        aria-atomic="true"
        aria-live="assertive"
        className="export-spinner cds--loading cds--loading--small"
      >
        <svg
          className="cds--loading__svg"
          viewBox="0 0 100 100"
        >
          <title>
            loading
          </title>
          <circle
            className="cds--loading__background"
            cx="50%"
            cy="50%"
            r="42"
          />
          <circle
            className="cds--loading__stroke"
            cx="50%"
            cy="50%"
            r="42"
          />
        </svg>
      </div>
    </Loading>
  </GroupForm>
</Provider>
`;

exports[`Button Group form component should render the editing form for generic object button group 1`] = `
<Provider
  store={
    Object {
      "asyncReducers": Object {
        "FormButtons": [Function],
        "miqCustomTabReducer": [Function],
        "notificationReducer": [Function],
      },
      "dispatch": [Function],
      "getState": [Function],
      "injectReducers": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <GroupForm
    appliesToClass="GenericObjectDefinition"
    appliesToId={6}
    availableFields={Array []}
    fields={Array []}
    isGenericObject={true}
    recId={219}
    url="/generic_object_definition/"
  >
    <Loading
      className="export-spinner"
      small={true}
      withOverlay={false}
    >
      <div
        aria-atomic="true"
        aria-live="assertive"
        className="export-spinner cds--loading cds--loading--small"
      >
        <svg
          className="cds--loading__svg"
          viewBox="0 0 100 100"
        >
          <title>
            loading
          </title>
          <circle
            className="cds--loading__background"
            cx="50%"
            cy="50%"
            r="42"
          />
          <circle
            className="cds--loading__stroke"
            cx="50%"
            cy="50%"
            r="42"
          />
        </svg>
      </div>
    </Loading>
  </GroupForm>
</Provider>
`;
